sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Schema_Org__mdt/SFDC_Schema_Org__mdt.object-meta.xml
<CustomObject>
    <description>Salesforce orgs dedicated for seeding schema details into this org which will not exist. These orgs are used to retrieve future industries data models or metadata for packaged components</description>
    <label>SFDC Schema Org</label>
    <pluralLabel>SFDC Schema Orgs</pluralLabel>
</CustomObject>