sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Schema_Org__mdt/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <inlineHelpText>Salesforce API version to use against seed org</inlineHelpText>
    <label>API Version</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>