sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Schema_Org__mdt/fields/Industry_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Industry_Namespace__c</fullName>
    <inlineHelpText>SFDC industry product namespace this seed organization has installed</inlineHelpText>
    <label>Industry Namespace</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>