sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Schema_Org__mdt/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <inlineHelpText>Base instance URL of seed organization to make Salesforce API requests to</inlineHelpText>
    <label>Instance URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>