sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Schema_Org__mdt/fields/Is_Sandbox__c.field-meta.xml
<CustomField>
    <fullName>Is_Sandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>