sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Schema_Org__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <inlineHelpText>Username of user in seed org approved for API access via Connected App to retrieve org information</inlineHelpText>
    <label>Username</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>