sfdc-ac-transition-pkg/force-app/main/default/objects/SFDC_Schema_Org__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Industry_Namespace__c</columns>
    <columns>Instance_URL__c</columns>
    <columns>Is_Sandbox__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>